--- a/philosopher.css
+++ b/philosopher.css
@@ -13,7 +13,6 @@ img {
     background-position: bottom;
     background-size: cover;
     display: flex;
-    
     align-items: flex-end;
     justify-content: center;
 
@@ -48,3 +47,6 @@ img {
     border-radius: 5px;
 }
 
+ul {
+    list-style: none;
+}
