--- a/philosopher.css
+++ b/philosopher.css
@@ -5,7 +5,12 @@ img {
     max-height: 500px;
 }
 
-.introduction{
+body,
+html {
+    overflow-x: hidden;
+}
+
+.introduction {
    
     width: 100vw;
     height: 100vh;
